--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,23 @@ version: "2"
 services:
 
   db:
-    build: db
+    image: mysql:5.7
     restart: unless-stopped
+    ports:
+      - "3306:3306"
     volumes:
+      - ./volumes/db/var/lib/mysql:/var/lib/mysql
       - ./volumes/db/var/lib/postgresql/data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - POSTGRES_USER=mmuser
-      - POSTGRES_PASSWORD=mmuser_password
-      - POSTGRES_DB=mattermost
-    # uncomment the following to enable backup
-    #  - AWS_ACCESS_KEY_ID=XXXX
-    #  - AWS_SECRET_ACCESS_KEY=XXXX
-    #  - WALE_S3_PREFIX=s3://BUCKET_NAME/PATH
-    #  - AWS_REGION=us-east-1
+      - MYSQL_ROOT_PASSWORD=example
+      - MYSQL_USER=mmuser
+      - MYSQL_PASSWORD=mmuser_password
+      - MYSQL_DATABASE=mattermost
 
   app:
     build:
       context: app
-      # comment out 2 following lines for team edition
-      # args:
-      #   - edition=team
     restart: unless-stopped
     volumes:
       - ./volumes/app/mattermost/config:/mattermost/config:rw
@@ -35,6 +31,10 @@ services:
       - MM_USERNAME=mmuser
       - MM_PASSWORD=mmuser_password
       - MM_DBNAME=mattermost
+      - DB_HOST=db
+      - DB_PORT_NUMBER=3306
+      - MM_SQLSETTINGS_DRIVERNAME=mysql
+      - MM_SQLSETTINGS_DATASOURCE=mmuser:mmuser_password@tcp(db:3306)/mattermost?charset=utf8mb4,utf8&readTimeout=30s&writeTimeout=30s
       # in case your config is not in default location
       #- MM_CONFIG=/mattermost/config/config.json
 
