--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,7 @@ services:
       - ./volumes/db/var/lib/mysql:/var/lib/mysql
       - ./volumes/db/var/lib/postgresql/data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
-    environment:
-      - MYSQL_ROOT_PASSWORD=example
-      - MYSQL_USER=mmuser
-      - MYSQL_PASSWORD=mmuser_password
-      - MYSQL_DATABASE=mattermost
+    env_file: .env
 
   app:
     build:
@@ -26,33 +22,25 @@ services:
       - ./volumes/app/mattermost/data:/mattermost/data:rw
       - ./volumes/app/mattermost/logs:/mattermost/logs:rw
       - /etc/localtime:/etc/localtime:ro
-    environment:
-      - MM_USERNAME=mmuser
-      - MM_PASSWORD=mmuser_password
-      - MM_DBNAME=mattermost
-      - DB_HOST=db
-      - DB_PORT_NUMBER=3306
-      - MM_SQLSETTINGS_DRIVERNAME=mysql
-      - MM_SQLSETTINGS_DATASOURCE=mmuser:mmuser_password@tcp(db:3306)/mattermost?charset=utf8mb4,utf8&readTimeout=30s&writeTimeout=30s
+    env_file: .env
 
   web:
     build: web
     ports:
-      - "17329:80"
+      - "${WEB_PORT}:80"
     restart: unless-stopped
     volumes:
       - ./volumes/web/cert:/cert:ro
       - /etc/localtime:/etc/localtime:ro
+    env_file: .env
   bot:
     image: yulapshun/mattermost-cugcbot:latest
     restart: unless-stopped
     volumes:
-      - ./mattermost-cugcbot/uwsgi.ini:/root/uwsgi.ini
-      - ./mattermost-cugcbot/config.ini:/root/config.ini
-      - ./mattermost-cugcbot/cugc:/root/cugc/
+      - ./volumes/bot/data:/root/cugc/data
+    env_file: .env
     logging:
       driver: "json-file"
       options:
         max-size: "20M"
         max-file: "10"
-    command: uwsgi --ini uwsgi.ini
