Use https in submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mattermost-cugcbot"]
 	path = mattermost-cugcbot
-	url = git@github.com:yulapshun/mattermost-cugcbot.git
+	url = https://github.com/yulapshun/mattermost-cugcbot.git
